# pomodoro-cli

./: .clangd  .gitignore  CMakeLists.txt
include/: cxxopts.hpp
src/: CMakeLists.txt  main.cpp  pomodoro.cpp  pomodoro.h  pomodoro_config.cpp  pomodoro_config.h  pomodoro_state.cpp  pomodoro_state.h
